<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.michaelwu.tictactoe.PvpActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_pvp_button_back"
        android:id="@+id/PvpActivity_button_back"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:onClick="back_button_clicked"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/activity_pvp_textView_player1"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_toEndOf="@+id/PvpActivity_button_back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/activity_pvp_textView_player2"
        android:id="@+id/textView2"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/textView" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/PvpActivity_button_back"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:background="@drawable/blank_black_background"
                android:id="@+id/PvpActivity_imageButton_00" />

            <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:background="@drawable/blank_black_background"
                android:id="@+id/PvpActivity_imageButton_01" />

            <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:background="@drawable/blank_black_background"
                android:id="@+id/PvpActivity_imageButton_02" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:background="@drawable/blank_black_background"
                android:id="@+id/PvpActivity_imageButton_10" />

            <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:background="@drawable/blank_black_background"
                android:id="@+id/PvpActivity_imageButton_11" />

            <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:background="@drawable/blank_black_background"
                android:id="@+id/PvpActivity_imageButton_12" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:background="@drawable/blank_black_background"
                android:id="@+id/PvpActivity_imageButton_20" />

            <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:background="@drawable/blank_black_background"
                android:id="@+id/PvpActivity_imageButton_12" />

            <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:background="@drawable/blank_black_background"
                android:id="@+id/PvpActivity_imageButton_22" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
